--- a/eurotoken/src/main/res/menu/eurotoken_navigation_menu.xml
+++ b/eurotoken/src/main/res/menu/eurotoken_navigation_menu.xml
@@ -3,7 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/transactionFragment"
+        android:id="@+id/transferFragment"
+        android:title="Transfer"
+        android:icon="@drawable/ic_baseline_euro_symbol_24" />
+    <item
+        android:id="@+id/transactionsFragment"
         android:title="Transaction History"
         android:icon="@drawable/ic_baseline_trans_hist_alt_24" />
     <item
