--- a/eurotoken/src/main/res/menu/eurotoken_options.xml
+++ b/eurotoken/src/main/res/menu/eurotoken_options.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/copyKey" android:title="Copy PubKey" />
+    <item android:id="@+id/verifyBalance" android:title="Verify Balance" />
+    <item android:id="@+id/renameSelf" android:title="Change name" />
 </menu>
