--- a/eurotoken/src/main/res/navigation/nav_graph_eurotoken.xml
+++ b/eurotoken/src/main/res/navigation/nav_graph_eurotoken.xml
@@ -15,7 +15,14 @@
         android:name="nl.tudelft.trustchain.eurotoken.ui.exchange.ExchangeFragment"
         android:label="Buy / Sell"
         tools:layout="@layout/fragment_exchange"
-        />
+        >
+        <action
+            android:id="@+id/action_exchangeFragment_to_destroyMoneyFragment"
+            app:destination="@id/destroyMoneyFragment" />
+        <action
+            android:id="@+id/action_exchangeFragment_to_createMoneyFragment"
+            app:destination="@id/createMoneyFragment" />
+    </fragment>
     <fragment
         android:id="@+id/transferFragment"
         android:name="nl.tudelft.trustchain.eurotoken.ui.transfer.TransferFragment"
@@ -52,5 +59,52 @@
         <argument
             android:name="data"
             app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/gatewaysFragment"
+        android:name="nl.tudelft.trustchain.eurotoken.ui.settings.GatewaysFragment"
+        android:label="Manage gateways" />
+    <fragment
+        android:id="@+id/destroyMoneyFragment"
+        android:name="nl.tudelft.trustchain.eurotoken.ui.exchange.DestroyMoneyFragment"
+        android:label="Selling EuroToken" >
+        <argument android:name="amount"
+            app:argType="long" />
+        <argument android:name="name"
+            app:argType="string" />
+        <argument android:name="payment_id"
+            app:argType="string" />
+        <argument android:name="ip"
+            app:argType="string" />
+        <argument android:name="port"
+            app:argType="integer" />
+        <argument android:name="public_key"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_destroyMoneyFragment_to_transactionsFragment"
+            app:destination="@id/transactionsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/createMoneyFragment"
+        android:name="nl.tudelft.trustchain.eurotoken.ui.exchange.CreateMoneyFragment"
+        android:label="Buying EuroToken">
+        <argument
+            android:name="name"
+            app:argType="string" />
+        <argument
+            android:name="public_key"
+            app:argType="string" />
+        <argument
+            android:name="ip"
+            app:argType="string" />
+        <argument
+            android:name="port"
+            app:argType="integer" />
+        <argument
+            android:name="payment_id"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_createMoneyFragment_to_transactionsFragment"
+            app:destination="@id/transactionsFragment" />
     </fragment>
 </navigation>
