--- a/eurotoken/src/main/res/layout/item_gateway.xml
+++ b/eurotoken/src/main/res/layout/item_gateway.xml
@@ -47,7 +47,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtName"
         app:layout_constraintStart_toStartOf="@id/txtName"
-        app:layout_constraintBottom_toBottomOf="parent"
         tools:text="4nmZNbpULdgYtjC2CW4NMveU8N6d4WW6" />
+
+    <TextView
+        android:id="@+id/txtAddress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/text_primary"
+        android:typeface="monospace"
+        android:ellipsize="end"
+        android:lines="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtPeerId"
+        app:layout_constraintStart_toStartOf="@id/txtName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:text="" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
