--- a/musicdao/src/main/res/layout/fragment_release_overview.xml
+++ b/musicdao/src/main/res/layout/fragment_release_overview.xml
@@ -11,8 +11,8 @@
         android:id="@+id/debugText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/loadingReleases"
@@ -20,41 +20,49 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="No music playlists found from peers"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ScrollView
-            android:id="@+id/release_overview_scroll_view"
-            android:layout_width="match_parent"
+
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <com.google.android.flexbox.FlexboxLayout
-                android:id="@+id/release_overview_layout"
+            <ScrollView
+                android:id="@+id/release_overview_scroll_view"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.flexbox.FlexboxLayout
+                    android:id="@+id/release_overview_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:flexWrap="wrap"
+                    app:justifyContent="space_evenly">
+
+                </com.google.android.flexbox.FlexboxLayout>
+            </ScrollView>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/addPlaylistFab"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:justifyContent="space_evenly"
-                app:flexWrap="wrap">
-
-            </com.google.android.flexbox.FlexboxLayout>
-        </ScrollView>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addPlaylistFab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="end|bottom"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:contentDescription="@string/add_playlist"
-            android:elevation="10dp"
-            android:src="@drawable/ic_baseline_add_24"
-            app:rippleColor="@color/white" />
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="end|bottom"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:contentDescription="@string/add_playlist"
+                android:elevation="10dp"
+                android:src="@drawable/ic_baseline_add_24"
+                android:visibility="gone"
+                app:rippleColor="@color/white" />
+        </RelativeLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </LinearLayout>
