--- a/ig-ssi/src/main/res/layout/fragment_database.xml
+++ b/ig-ssi/src/main/res/layout/fragment_database.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="bottom"
+    android:background="#FFFFFF"
     android:orientation="vertical">
 
     <LinearLayout
@@ -14,31 +15,52 @@
 
         <LinearLayout
             android:id="@+id/linearLayout3"
-            android:layout_width="match_parent"
-            android:layout_height="277dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/publicKeyQRCode"
-                android:layout_width="wrap_content"
-                android:layout_height="230dp"
-                android:src="@drawable/ic_qr_code" />
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <ProgressBar
+                android:id="@+id/qrCodePlaceHolder"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/colorPrimaryDarkSSI" />
+
+            <TextView
+                android:id="@+id/TextView"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:gravity="center_horizontal"
+                android:text="My public key"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/myPublicKey"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_margin="10dp"
                 android:gravity="center_horizontal"
                 android:text="TextView"
                 android:textAlignment="center" />
+
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.7"
             android:orientation="vertical">
 
             <LinearLayout
@@ -84,7 +106,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85"
+        app:layout_constraintVertical_bias="0.8"
         app:srcCompat="@drawable/ic_cloud_off_black_24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
