--- a/ig-ssi/src/main/res/layout/present_attestation_dialog.xml
+++ b/ig-ssi/src/main/res/layout/present_attestation_dialog.xml
@@ -17,9 +17,10 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:indeterminate="true"
+        android:indeterminateTint="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
