--- a/ig-ssi/src/main/res/layout/request_attestation_dialog.xml
+++ b/ig-ssi/src/main/res/layout/request_attestation_dialog.xml
@@ -1,12 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/attribute_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/attribute" />
+        android:backgroundTint="@android:color/holo_red_dark"
+        android:hint="@string/attribute_name"
+        android:textCursorDrawable="@null" />
 
 </LinearLayout>
