--- a/ig-ssi/src/main/res/menu/bottom_navigation_menu2.xml
+++ b/ig-ssi/src/main/res/menu/bottom_navigation_menu2.xml
@@ -2,17 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/peersFragment2"
-        android:icon="@drawable/ic_arrow_drop_down_black_16dp"
-        android:title="Peers" />
+        android:id="@+id/databaseFragment"
+        android:icon="@drawable/ic_round_home_24"
+        android:title="Home" />
+
 
     <item
         android:id="@+id/verificationFragment"
         android:icon="@drawable/ic_baseline_camera_24"
         android:title="Scanner" />
 
+
     <item
-        android:id="@+id/databaseFragment"
-        android:icon="@drawable/ic_cloud_off_black_24dp"
-        android:title="Database" />
+        android:id="@+id/peersFragment2"
+        android:icon="@drawable/ic_baseline_network_check_24"
+        android:title="Users" />
 </menu>
