--- a/liquidity-pool/src/main/res/menu/liquidity_navigation_menu.xml
+++ b/liquidity-pool/src/main/res/menu/liquidity_navigation_menu.xml
@@ -7,7 +7,14 @@
         android:icon="@drawable/ic_baseline_euro_symbol_24"
         android:title="Wallet" />
     <item
+        android:id="@+id/JoinPoolFragment"
+        android:icon="@drawable/ic_add_black_24dp"
+        android:title="Join Pool" />
+    <item
         android:id="@+id/poolFragment"
         android:icon="@drawable/ic_device_hub_black_24dp"
-        android:title="Item" />
+        android:title="Exchange" />
+    <item
+        android:id="@+id/poolOwnerFragment"
+        android:title="Owners" />
 </menu>
