--- a/liquidity-pool/src/main/res/navigation/nav_graph_liquidity.xml
+++ b/liquidity-pool/src/main/res/navigation/nav_graph_liquidity.xml
@@ -9,8 +9,18 @@
         android:name="nl.tudelft.trustchain.liquidity.ui.WalletFragment"
         android:label="Wallet" />
     <fragment
+        android:id="@+id/JoinPoolFragment"
+        android:name="nl.tudelft.trustchain.liquidity.ui.JoinPoolFragment"
+        android:label="Join Pool"
+        tools:layout="@layout/fragment_pool_join" />
+    <fragment
         android:id="@+id/poolFragment"
-        android:name="nl.tudelft.trustchain.liquidity.PoolFragment"
+        android:name="nl.tudelft.trustchain.liquidity.ui.PoolFragment"
         android:label="Pool"
         tools:layout="@layout/fragment_pool" />
+    <fragment
+        android:id="@+id/poolOwnerFragment"
+        android:name="nl.tudelft.trustchain.liquidity.ui.PoolOwnerFragment"
+        android:label="Pool Owners"
+        tools:layout="@layout/fragment_pool_owner" />
 </navigation>
